# multi-agent-after-sale-v2

./: .dockerignore  .gitignore  MEMORY_GUIDE.md  README.md  docker-compose.acr.yml  docker-compose.yml  requirements.txt
backend/: pyproject.toml
backend/app/: __main__.py  requirements.txt  setup.py
backend/app/api/: dependencies.py  main.py  routers.py
backend/app/config/: settings.py  test_settings.py
backend/app/infrastructure/ai/: openai_client.py  prompt_loader.py
backend/app/infrastructure/database/: database_pool.py  repair_shops.sql  (+2 more)
backend/app/multi_agent/: agent_factory.py  orchestrator_agent.py  service_agent.py  technical_agent.py
backend/app/prompts/: technical_agent.md
backend/app/repositories/: chat_session_repository.py  session_repository.py  user_repository.py
backend/app/schemas/: auth.py  request.py  response.py
backend/app/services/: agent_service.py  auth_service.py  session_service.py  stream_response_service.py
backend/app/utils/: response_util.py  security.py  text_util.py
backend/knowledge/: __main__.py  setup.py
backend/knowledge/api/: main.py  routers.py
backend/knowledge/cli/: crawl_cli.py  upload_cli.py
backend/knowledge/config/: settings.py
backend/knowledge/repositories/: file_repository.py  vector_store_repository.py
backend/knowledge/schemas/: schema.py
backend/knowledge/services/: query_service.py  retrieval_service.py
backend/knowledge/test/: test_async.py  test_beautifulsoup4.py  test_html_to_markdown.py  test_illegal_chars.py
backend/knowledge/utils/: markdown_utils.py  text_utils.py
(+32 files in other folders)
